Refactor style and script for better readability

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
-<div class="container">
+<div class="container flex">
   <header class="flex">
-    <img src="images/icon-profile.png" alt="profile">
-    <img src="images/logo.png" alt="logo">
-    <img src="images/icon-chat.png" alt="chat">
+    <a>
+      <img src="images/icon-profile.png" alt="profile">
+    </a>
+    <a>
+      <img src="images/logo.png" alt="logo">
+    </a>
+    <a>
+      <img src="images/icon-chat.png" alt="chat">
+    </a>
   </header>
   <main>
     <section class="dog flex" id="dog">
