Add title and comment in HTML for UX and readability, refactor JavaScript for readability

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Tindog</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -20,7 +21,7 @@
   </header>
   <main>
     <section class="dog flex" id="dog">
-
+      <!-- Rendered in JavaScript-->
     </section>
     <section class="action-buttons flex">
       <div class="action-container flex">
